<resources>
    <string name="app_name">"VoiceofCustomer "</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_dashboard_screen">DashboardScreen</string>
    <string name="title_activity_base_acitivity">BaseAcitivity</string>


    <string name="survey">"Survey "</string>
    <string name="create_survey">"Create Survey "</string>
    <string name="add_survey">"Add\/New\nSurvey "</string>
    <string name="view_survey">"View Survey "</string>
    <string name="survey_name">"Survey Name/Title"</string>
    <string name="survey_desc">"Survey Description/Uplaod Image"</string>
    <string name="survey_end_date">"Survey End Date"</string>
    <string name="Closed_survey">Closed Survey</string>
    <string name="open_survey">Create Survey</string>
    <string name="new_Survey">New Survey</string>
    <string name="login_signup">Login/Signup</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="in_progress_Survey">In Progress Survey</string>
    <string name="completed_survey">Completed Survey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!--- Bottom Bar -->

    <string name="response">Responses</string>
    <string name="queries">Queries</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="analyze">Analyze</string>
    <string name="submit">"Submit"</string>
</resources>
